# Argus

./: .gitignore  NOTICE.md  README-Cherry-Studio.md  README-EN.md  README-MCP-FAQ-EN.md  README-MCP-FAQ.md  README.md  index.html  pyproject.toml  setup-mac.sh  setup-windows-en.bat  setup-windows.bat  start-http.bat  start-http.sh
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-ai-and-config.yml
.github/workflows/: crawler.yml  docker.yml
argus/: __init__.py  __main__.py  context.py
argus/ai/: __init__.py  analyzer.py  filter.py  translator.py
argus/core/: __init__.py  analyzer.py  data.py  loader.py
argus/crawler/: __init__.py
argus/notification/: __init__.py  dispatcher.py  renderer.py  senders.py  splitter.py
argus/report/: __init__.py  formatter.py  html.py  rss_html.py
argus/storage/: __init__.py  local.py  manager.py  remote.py  rss_schema.sql  schema.sql  sqlite_mixin.py
argus/utils/: __init__.py
argus/web/: __init__.py  __main__.py  app.py
argus_server/: __init__.py  feishu_bot.py  scheduler_runner.py  server.py
argus_server/services/: data_service.py  parser_service.py
argus_server/tools/: ai_analytics.py  ai_enhanced.py  (+18 more)
config/: ai_analysis_prompt.txt  ai_interests.txt  ai_translation_prompt.txt  config.example.yaml  frequency_words.txt  timeline.yaml
docker/: Dockerfile  Dockerfile.mcp  docker-compose-build.yml  docker-compose.yml  entrypoint.sh  manage.py
docs/: FEISHU_BOT_SETUP.md  HANDOFF.md  SCHEDULER_GUIDE.md  index.html
scripts/: export_bundle.sh  install-werss.sh  start-feishu-bot.sh  start-web.sh
(+3 files in other folders)
